Fixing z-indexes problem

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
 }
 body{
+    position: relative;
     min-height:100vh;
     display: flex;
     flex-direction: column;
@@ -20,14 +21,20 @@ body{
     -ms-user-select: none;
     -moz-user-select: none;
     user-select: none;
-}  
+}
 
 /* Navbar */
+header{
+    display:flex;
+    position: relative;
+    z-index:1;
+}
 .navbar{
     font-size: 30px;
     position: relative;
     background: black;
     display:flex;
+    width:100%;
     z-index:0;
 }
 .navbar .links{
@@ -45,6 +52,8 @@ body{
     padding: 7px 25px;
     text-decoration: none;
     color:white;
+    position: relative;
+    z-index: 1;
 }
 .navbar .links>li>a:hover,
 .navbar .links>li>.link:hover{
@@ -58,7 +67,7 @@ body{
     display:flex;
     position: absolute;
     top:-1000px;
-    z-index: -1;
+    z-index: 0;
     background:black;
     border-radius: 10px;
 }
@@ -145,6 +154,7 @@ body{
         width:100%;
         height:50px;
         background: black;
+        z-index:1;
     }
     .phone-btn{
         display: flex;
@@ -211,7 +221,7 @@ body{
     position: relative;
     display:flex;
     flex-direction: column;
-    z-index:-1;
+    z-index:0;
     width:80%;
     margin-left: 10%;
     margin-top: 30px;
@@ -294,5 +304,4 @@ footer{
     margin-top:auto;
     display:flex;
     background:gray;
-    z-index: -1;
 }
